--- a/index.html
+++ b/index.html
@@ -194,6 +194,57 @@
 </section>
 <!----------------smoothies------------------->
 <!----------------about------------------->
+<section class="about">
+	<div class="about__row">
+
+		<div class="about__column">
+			<div class="about__image">
+				<img src="#" alt="">
+			</div>
+		</div>
+
+		
+		<div class="about__column">
+			<div class="about__description">
+
+				<h2 class="title"></h2>
+
+				<ul class="about__list">
+					<li class="about__item">
+						<a class="__about__link" href="#" ></a>
+					</li>
+					<li class="about__item">
+						<a class="__about__link" href="#" ></a>
+					</li>
+					<li class="about__item">
+						<a class="__about__link" href="#" ></a>
+					</li>
+					<li class="about__item">
+						<a class="__about__link" href="#" ></a>
+					</li>
+					<li class="about__item">
+						<a class="__about__link" href="#" ></a>
+					</li>
+					<li class="about__item">
+						<a class="__about__link" href="#" ></a>
+					</li>
+					<li class="about__item">
+						<a class="__about__link" href="#" ></a>
+					</li>
+					<li class="about__item">
+						<a class="__about__link" href="#" ></a>
+					</li>
+				</ul>
+ 
+				<div class="bth">
+					<a href="#"></a>
+				</div>
+
+			</div>
+		</div>
+
+	</div>
+</section>
 
 <!----------------about------------------->
 <!----------------products------------------->
