--- a/#source/html/content/story.html
+++ b/#source/html/content/story.html
@@ -1,3 +1,29 @@
 <!----------------story------------------->
+<section class="story">
+	<div class="content__story">
+		<div class="story__row">
+
+			<div class="story__column">
+				<div class="story__wrapper">
+
+					<h2 class="title"></h2>
+					<p class="text"></p>
+
+					<div class="bth">
+						<a href=""></a>
+					</div>
+					
+				</div>
+			</div>
+
+			<div class="story__column">
+				<div class="story__image">
+					<img src="#" alt="">
+				</div>
+			</div>
+
+		</div>
+	</div>
+</section>
 
 <!----------------story------------------->
