testimonials Html-Css

--- a/index.html
+++ b/index.html
@@ -349,6 +349,39 @@
 
 <!----------------story------------------->
 <!----------------testimonials------------------->
+<section class="testimonials">
+
+	<h2 class="title"></h2>
+
+	<div class="testimonials__row">
+
+		<div class="testimonials__column">
+			<q></q>
+			<city></city>
+		</div>
+
+		<div class="testimonials__column">
+			<q class="text"></q>
+
+			<div class="testimonials__sub-text">
+				<cite class="testimonials-name__user"></cite>
+			</div>
+
+		</div>
+		
+		<div class="sidebar">
+
+			<button class="arrow__left">
+				<img src="#" alt="">
+			</button>
+
+			<button class="arrow__right">
+	   		<img src="#" alt="">		
+			</button>
+		</div>
+
+	</div>
+</section>
 
 <!----------------testimonials------------------->
 <!----------------blog------------------->
