instagram Html Css

--- a/index.html
+++ b/index.html
@@ -416,6 +416,47 @@
 
 <!----------------blog------------------->
 <!----------------instagram------------------->
+<section class="instagram">
+	<div class="instagram__row">
+
+		<div class="instagram__column">
+
+			<div class="instagram__image">
+				<img src="#" alt="">
+
+			</div>
+			<img class="instagram__icon" src="#" alt="">
+		</div>
+
+		<div class="instagram__column">
+
+			<div class="instagram__image">
+				<img src="#" alt="">
+
+			</div>
+			<img class="instagram__icon" src="#" alt="">
+		</div>
+
+		<div class="instagram__column">
+
+			<div class="instagram__image">
+				<img src="#" alt="">
+
+			</div>
+			<img class="instagram__icon" src="#" alt="">
+		</div>
+
+		<div class="instagram__column">
+
+			<div class="instagram__image">
+				<img src="#" alt="">
+
+			</div>
+			<img class="instagram__icon" src="#" alt="">
+		</div>
+
+	</div>
+</section>
 
 <!----------------instagram------------------->
 		</main>
