footer Html-Css

--- a/#source/html/footer.html
+++ b/#source/html/footer.html
@@ -2,6 +2,164 @@
 
 <!--*************************************-->
 
+<section class="footer">
+	<div class="conteiner">
+		<div class="footer__row">
+			<!----colum-------------------------------------------------->
+			<div class="footer__column">
+				<div class="footer__image">
+					<img src="#" alt="">
+				</div>
+			</div>
+			<!----colum-------------------------------------------------->
+			<div class="footer__column">
+
+				<h3 class="title-h3"></h3>
+
+				<ul class="footer__list">
+					<li class="footer__item">
+						<a href="#"></a>
+					</li>
+				</ul>
+
+				<ul class="footer__list">
+					<li class="footer__item">
+						<a href="#"></a>
+					</li>
+				</ul>
+
+				<ul class="footer__list">
+					<li class="footer__item">
+						<a href="#"></a>
+					</li>
+				</ul>
+
+				<ul class="footer__list">
+					<li class="footer__item">
+						<a href="#"></a>
+					</li>
+				</ul>
+
+			</div>
+			<!----colum-------------------------------------------------->
+			<div class="footer__column">
+
+				<h3 class="title-h3"></h3>
+				<!---sub-colum-------------------------------------------------->
+				<ul class="icon__column">
+					<li class="icon__list">
+						<a class="icon__link" href="#">
+							<img src="#" alt="#">
+						</a>
+					</li>
+
+					<li class="icon__list">
+						<a class="icon__link" href="#">
+							<img src="#" alt="#">
+						</a>
+					</li>
+
+					<li class="icon__list">
+						<a class="icon__link" href="#">
+							<img src="#" alt="#">
+						</a>
+					</li>
+
+					<li class="icon__list">
+						<a class="icon__link" href="#">
+							<img src="#" alt="#">
+						</a>
+					</li>
+				</ul>
+				<!--- sub-colum-------------------------------------------------->
+				<ul class="icon__column">
+					<li class="icon__list">
+						<a class="icon__link" href="#">
+							<img src="#" alt="#">
+						</a>
+					</li>
+
+					<li class="icon__list">
+						<a class="icon__link" href="#">
+							<img src="#" alt="#">
+						</a>
+					</li>
+
+					<li class="icon__list">
+						<a class="icon__link" href="#">
+							<img src="#" alt="#">
+						</a>
+					</li>
+
+				</ul>
+				<!--- sub-colum-------------------------------------------------->
+				<ul class="icon__column">
+					<li class="icon__list">
+						<a class="icon__link" href="#">
+							<img src="#" alt="#">
+						</a>
+					</li>
+
+					<li class="icon__list">
+						<a class="icon__link" href="#">
+							<img src="#" alt="#">
+						</a>
+					</li>
+
+				</ul>
+				<!----------------------------------------------------->
+			</div>
+			<!----colum-------------------------------------------------->
+			<div class="footer__column">
+				<h3 class="title"></h3>
+
+				<div class="input">
+					<input class="input-search" type="search" name="search" placeholder="">
+					<img class="icon-letter" src="#" alt="">
+				</div>
+
+				<div class="footer__row">
+
+					<h3 class="footer__text"></h3>
+					<!--- sub-colum-------------------------------------------->
+					<ul class="icon__column">
+						<li class="icon__list">
+							<a class="icon__link" href="#">
+								<img src="#" alt="#">
+							</a>
+						</li>
+						<!--- sub-colum-------------------------------------------->
+						<li class="icon__list">
+							<a class="icon__link" href="#">
+								<img src="#" alt="#">
+							</a>
+						</li>
+						<!--- sub-colum-------------------------------------------->
+						<li class="icon__list">
+							<a class="icon__link" href="#">
+								<img src="#" alt="#">
+							</a>
+						</li>
+						<!--- sub-colum-------------------------------------------->
+					</ul>
+
+				</div>
+			</div>
+			<!----colum-------------------------------------------->
+		</div>
+
+		<div class="footer__bottom">
+
+			<small class="author-rights"></small>
+
+			<p class="text footer__bottom-text"></p>
+
+			<div class="footer__bottom-image">
+				<img src="#" alt="">
+			</div>
+		</div>
+	</div>
+</section>
 
 
 
