--- a/#source/html/content/testimonials.html
+++ b/#source/html/content/testimonials.html
@@ -6,31 +6,38 @@
 	<div class="testimonials__row">
 
 		<div class="testimonials__column">
-			<q></q>
-			<city></city>
-		</div>
 
-		<div class="testimonials__column">
 			<q class="text"></q>
-
 			<div class="testimonials__sub-text">
 				<cite class="testimonials-name__user"></cite>
 			</div>
 
 		</div>
-		
-		<div class="sidebar">
 
-			<button class="arrow__left">
+
+		<div class="testimonials__column">
+
+			<div class="testimonials-avatar">
 				<img src="#" alt="">
-			</button>
+			</div>
 
-			<button class="arrow__right">
-	   		<img src="#" alt="">		
-			</button>
 		</div>
 
 	</div>
+
+	<div class="sidebar">
+
+		<button class="arrow__left">
+			<img src="#" alt="">
+		</button>
+
+		<button class="arrow__right">
+			<img src="#" alt="">
+		</button>
+
+	</div>
+
+
 </section>
 
 <!----------------testimonials------------------->
