--- a/#source/html/content/about.html
+++ b/#source/html/content/about.html
@@ -4,45 +4,49 @@
 
 		<div class="about__column">
 			<div class="about__image">
-				<img src="#" alt="">
+				<img src="assets/images/about/about.png" alt="#">
 			</div>
 		</div>
 
-		
+
 		<div class="about__column">
 			<div class="about__description">
 
-				<h2 class="title"></h2>
+				<h2 class="title">What makes Smoothie an awesome drink? </h2>
 
 				<ul class="about__list">
 					<li class="about__item">
-						<a class="__about__link" href="#" ></a>
+						<a class="about__link" href="#">Crunchy Puffs Texture</a>
 					</li>
 					<li class="about__item">
-						<a class="__about__link" href="#" ></a>
+						<a class="about__link" href="#">100 Calories per drink</a>
 					</li>
 					<li class="about__item">
-						<a class="__about__link" href="#" ></a>
+						<a class="about__link" href="#">4g Plant Protein </a>
 					</li>
 					<li class="about__item">
-						<a class="__about__link" href="#" ></a>
+						<a class="about__link" href="#">
+							Good source of Magnesium & Vitamin B6
+						</a>
 					</li>
 					<li class="about__item">
-						<a class="__about__link" href="#" ></a>
+						<a class="about__link" href="#">
+							No Sugar in our Savory Flavors
+						</a>
 					</li>
 					<li class="about__item">
-						<a class="__about__link" href="#" ></a>
+						<a class="about__link" href="#">Non-GMO, Vegan & Paleo</a>
 					</li>
 					<li class="about__item">
-						<a class="__about__link" href="#" ></a>
+						<a class="about__link" href="#">Gluten-Free & Grain-Free</a>
 					</li>
 					<li class="about__item">
-						<a class="__about__link" href="#" ></a>
+						<a class="about__link" href="#"> Corn-Free & Soy-Free</a>
 					</li>
 				</ul>
- 
+
 				<div class="bth">
-					<a href="#"></a>
+					<a href="#">About Organic Smoothie</a>
 				</div>
 
 			</div>
