--- a/#source/html/content/testimonials.html
+++ b/#source/html/content/testimonials.html
@@ -1,15 +1,18 @@
 <!----------------testimonials------------------->
 <section class="testimonials">
 
-	<h2 class="title"></h2>
+	<h2 class="title">Why clients LOVE us?</h2>
 
 	<div class="testimonials__row">
 
 		<div class="testimonials__column">
 
-			<q class="text"></q>
+			<q class="text">
+				Smoothie is great. I don't know what else to say. I will let my mum know about this, she could
+				really make use of Smoothie! Smoothie saved my business.
+			</q>
 			<div class="testimonials__sub-text">
-				<cite class="testimonials-name__user"></cite>
+				<cite class="testimonials-name__user">- from Santa Monica, CA</cite>
 			</div>
 
 		</div>
@@ -18,7 +21,7 @@
 		<div class="testimonials__column">
 
 			<div class="testimonials-avatar">
-				<img src="#" alt="">
+				<img src="assets/images/testimonials/avatar.png" alt="">
 			</div>
 
 		</div>
@@ -28,11 +31,11 @@
 	<div class="sidebar">
 
 		<button class="arrow__left">
-			<img src="#" alt="">
+			<img src="assets/images/testimonials/Arrow-right.png" alt="">
 		</button>
 
 		<button class="arrow__right">
-			<img src="#" alt="">
+			<img src="assets/images/testimonials/Arrow-right.png" alt="">
 		</button>
 
 	</div>
