--- a/#source/html/footer.html
+++ b/#source/html/footer.html
@@ -14,29 +14,29 @@
 			<!----colum-------------------------------------------------->
 			<div class="footer__column">
 
-				<h3 class="title-h3"></h3>
+				<h3 class="title-h3">Information</h3>
 
 				<ul class="footer__list">
 					<li class="footer__item">
-						<a href="#"></a>
+						<a href="#">Search</a>
 					</li>
 				</ul>
 
 				<ul class="footer__list">
 					<li class="footer__item">
-						<a href="#"></a>
+						<a href="#"> Contact us</a>
 					</li>
 				</ul>
 
 				<ul class="footer__list">
 					<li class="footer__item">
-						<a href="#"></a>
+						<a href="#">Terms & Conditions</a>
 					</li>
 				</ul>
 
 				<ul class="footer__list">
 					<li class="footer__item">
-						<a href="#"></a>
+						<a href="#">Privacy Policy</a>
 					</li>
 				</ul>
 
@@ -44,30 +44,30 @@
 			<!----colum-------------------------------------------------->
 			<div class="footer__column">
 
-				<h3 class="title-h3"></h3>
+				<h3 class="title-h3">Payment</h3>
 				<!---sub-colum-------------------------------------------------->
 				<ul class="icon__column">
 					<li class="icon__list">
 						<a class="icon__link" href="#">
-							<img src="#" alt="#">
+							<img src="assets/images/footer/AMEX.svg" alt="#">
 						</a>
 					</li>
 
 					<li class="icon__list">
 						<a class="icon__link" href="#">
-							<img src="#" alt="#">
+							<img src="assets/images/footer/Paypal.svg" alt="#">
 						</a>
 					</li>
 
 					<li class="icon__list">
 						<a class="icon__link" href="#">
-							<img src="#" alt="#">
+							<img src="assets/images/footer/Maestro.svg" alt="#">
 						</a>
 					</li>
 
 					<li class="icon__list">
 						<a class="icon__link" href="#">
-							<img src="#" alt="#">
+							<img src="assets/images/footer/Discover.svg" alt="#">
 						</a>
 					</li>
 				</ul>
@@ -75,19 +75,19 @@
 				<ul class="icon__column">
 					<li class="icon__list">
 						<a class="icon__link" href="#">
-							<img src="#" alt="#">
+							<img src="assets/images/footer/JCB.svg" alt="#">
 						</a>
 					</li>
 
 					<li class="icon__list">
 						<a class="icon__link" href="#">
-							<img src="#" alt="#">
+							<img src="assets/images/footer/Mastercard.svg" alt="#">
 						</a>
 					</li>
 
 					<li class="icon__list">
 						<a class="icon__link" href="#">
-							<img src="#" alt="#">
+							<img src="assets/images/footer/Paypal.svg" alt="#">
 						</a>
 					</li>
 
@@ -96,13 +96,13 @@
 				<ul class="icon__column">
 					<li class="icon__list">
 						<a class="icon__link" href="#">
-							<img src="#" alt="#">
+							<img src="assets/images/footer/Shopify-Pay.svg" alt="#">
 						</a>
 					</li>
 
 					<li class="icon__list">
 						<a class="icon__link" href="#">
-							<img src="#" alt="#">
+							<img src="assets/images/footer/Visa.svg" alt="#">
 						</a>
 					</li>
 
@@ -111,7 +111,7 @@
 			</div>
 			<!----colum-------------------------------------------------->
 			<div class="footer__column">
-				<h3 class="title"></h3>
+				<h3 class="title">Don’t miss out!</h3>
 
 				<div class="input">
 					<input class="input-search" type="search" name="search" placeholder="">
@@ -125,19 +125,19 @@
 					<ul class="icon__column">
 						<li class="icon__list">
 							<a class="icon__link" href="#">
-								<img src="#" alt="#">
+								<img src="assets/images/footer/Facebook.svg" alt="#">
 							</a>
 						</li>
 						<!--- sub-colum-------------------------------------------->
 						<li class="icon__list">
 							<a class="icon__link" href="#">
-								<img src="#" alt="#">
+								<img src="assets/images/footer/Pinterest.svg" alt="#">
 							</a>
 						</li>
 						<!--- sub-colum-------------------------------------------->
 						<li class="icon__list">
 							<a class="icon__link" href="#">
-								<img src="#" alt="#">
+								<img src="assets/images/footer/Instagram.svg" alt="#">
 							</a>
 						</li>
 						<!--- sub-colum-------------------------------------------->
