--- a/#source/html/header.html
+++ b/#source/html/header.html
@@ -7,8 +7,9 @@
 	<div class="conteiner">
 		<div class="header__row">
 			<div class="header__top">
+
 				<div class="header__column ">
-					<nav class="nav">
+					<nav class="header__nav">
 						<ul class="nav__list">
 							<li class="nav__item"><a href="#">Home</a></li>
 							<li class="nav__item"><a href="#">Shop</a></li>
@@ -19,28 +20,32 @@
 						</ul>
 					</nav>
 				</div>
+
 				<div class="header__column">
 					<div class="header__image">
 						<img src="assets/images/header/Logo.png" alt="#">
 					</div>
 				</div>
+
 				<div class="header__column icon">
 					<div class="icon__wrapper">
 
 						<ul class="icon__column">
 							<li class="icon__list">
 								<a class="icon__link" href="#">
-									<img src="assets/images/header/Search.png" alt="#">
+									<img src="assets/images/header/Search-icon.svg" alt="#">
 								</a>
 							</li>
+
 							<li class="icon__list">
 								<a class="icon__link" href="#">
-									<img src="assets/images/header/User.png" alt="#">
+									<img src="assets/images/header/User-icon.svg" alt="#">
 								</a>
 							</li>
+
 							<li class="icon__list">
-								<a class="icon__link active" href="#">
-									<img src="assets/images/header/Cart.png" alt="#">
+								<a class="icon__link " href="#">
+									<img src="assets/images/header/Cart-icon.svg" alt="#">
 									<div class="icon__tabs">
 										<p>0</p>
 									</div>
@@ -48,43 +53,48 @@
 							</li>
 						</ul>
 
-						<div class="icon__line">
+						<div class="icon__column">
 						</div>
 
 						<ul class="icon__column">
 							<li class="icon__list">
-								<a class="icon__link-acive" href="#">
-									<img src="assets/images/header/Facebook.png" alt="#">
+								<a class="icon__link" href="#">
+									<img src="assets/images/header/Facebook-icon.svg" alt="#">
 								</a>
 							</li>
 
 							<li class="icon__list">
 								<a class="icon__link" href="#">
-									<img src="assets/images/header/Pinterest.png" alt="#">
+									<img src="assets/images/header/Pinterest-icon.svg" alt="#">
 								</a>
 							</li>
 
 							<li class="icon__list">
 								<a class="icon__link" href="#">
-									<img src="assets/images/header/Instagram.png" alt="#">
+									<img src="assets/images/header/Instagram-icon.svg" alt="#">
 								</a>
 							</li>
 
 						</ul>
+
 					</div>
 				</div>
+
 			</div>
 			<div class="header__bottom">
-				<a class="bth" href="#" alt="#">
+
+				<a class="bth header__bth" href="#" alt="#">
 					Shop Now
 				</a>
+
 			</div>
 		</div>
+
 	</div>
 </header>
+
 <div class="header__background ibg">
 	<img src="assets/images/header/img.png" alt="#">
-	<span></span>
 </div>
 
 <!----------------Header------------------->
