--- a/#source/html/content/story.html
+++ b/#source/html/content/story.html
@@ -6,19 +6,24 @@
 			<div class="story__column">
 				<div class="story__wrapper">
 
-					<h2 class="title"></h2>
-					<p class="text"></p>
+					<h2 class="title">Our story/h2>
+						<p class="text">
+							As products typically using raw fruits or vegetables,
+							smoothies include dietary fiber (e.g. pulp, skin, and
+							seeds) and so are thicker than fruit juice, often with a
+							consistency similar to a milkshake.
+						</p>
 
-					<div class="bth">
-						<a href=""></a>
-					</div>
-					
+						<div class="bth">
+							<a href="">Who we are</a>
+						</div>
+
 				</div>
 			</div>
 
 			<div class="story__column">
 				<div class="story__image">
-					<img src="#" alt="">
+					<img src="assets/images/story/Stamp.png" alt="story">
 				</div>
 			</div>
 
