--- a/#source/html/content/smoothies.html
+++ b/#source/html/content/smoothies.html
@@ -6,7 +6,8 @@
 			<h2 class="title">What are these smoothies? </h2>
 			<p class="text smoothie__text">
 				A smoothie is a drink made from pureed raw fruit, vegetables, and sometimes dairy products
-				(milk, yogurt, ice-cream or cottage cheese), typically using a blender. Smoothies may be made using other
+				(milk, yogurt, <br> ice-cream or cottage cheese), typically using a blender. Smoothies may be made using
+				other
 				ingredients, such as water, crushed ice, fruit juice, sweeteners (e.g. honey, sugar, stevia, or syrup), whey
 				powder, plant milk, nuts, nut butter, seeds, tea, chocolate, herbal supplements, or nutritional supplements.
 			</p>
@@ -19,7 +20,7 @@
 					<div class="smoothies__image">
 						<img src="assets/images/smoothies/Icon-1.png" alt="Plant Based">
 					</div>
-					<h3 class="title">Plant Based</h3>
+					<h3 class="smoothie__title">Plant Based</h3>
 				</div>
 			</div>
 
@@ -28,7 +29,7 @@
 					<div class="smoothies__image">
 						<img src="assets/images/smoothies/Icon-2.png" alt="Vegan">
 					</div>
-					<h3 class="title">Vegan</h3>
+					<h3 class="smoothie__title">Vegan</h3>
 				</div>
 			</div>
 
@@ -37,7 +38,7 @@
 					<div class="smoothies__image">
 						<img src="assets/images/smoothies/Icon-3.png" alt="Paleo">
 					</div>
-					<h3 class="title">Paleo </h3>
+					<h3 class="smoothie__title">Paleo </h3>
 				</div>
 			</div>
 
@@ -46,7 +47,7 @@
 					<div class="smoothies__image">
 						<img src="assets/images/smoothies/Icon-4.png" alt="Gluten-Free">
 					</div>
-					<h3 class="title">Gluten-Free</h3>
+					<h3 class="smoothie__title">Gluten-Free</h3>
 				</div>
 			</div>
 
@@ -55,7 +56,7 @@
 					<div class="smoothies__image">
 						<img src="assets/images/smoothies/Icon-5.png" alt="Corn-Free">
 					</div>
-					<h3 class="title">Corn-Free</h3>
+					<h3 class="smoothie__title">Corn-Free</h3>
 				</div>
 			</div>
 
@@ -64,7 +65,7 @@
 					<div class="smoothies__image">
 						<img src="assets/images/smoothies/Icon-6.png" alt="Soy-Free">
 					</div>
-					<h3 class="title">Soy-Free</h3>
+					<h3 class="smoothie__title">Soy-Free</h3>
 				</div>
 			</div>
 
@@ -73,7 +74,7 @@
 					<div class="smoothies__image">
 						<img src="assets/images/smoothies/Icon-7.png" alt="Soy-Free">
 					</div>
-					<h3 class="title">Soy-Free</h3>
+					<h3 class="smoothie__title">Soy-Free</h3>
 				</div>
 			</div>
 
@@ -82,7 +83,7 @@
 					<div class="smoothies__image">
 						<img src="assets/images/smoothies/Icon-8.png" alt="Made With Love">
 					</div>
-					<h3 class="title">Made With Love</h3>
+					<h3 class="smoothie__title">Made With Love</h3>
 				</div>
 			</div>
 
