--- a/#source/html/content/testimonials.html
+++ b/#source/html/content/testimonials.html
@@ -1,45 +1,48 @@
 <!----------------testimonials------------------->
 <section class="testimonials">
+	<div class="testimonials__wrapper">
 
-	<h2 class="title">Why clients LOVE us?</h2>
+		<h2 class="title">Why clients <span class="title--color"> LOVE</span> us?</h2>
 
-	<div class="testimonials__row">
+		<div class="testimonials__row">
 
-		<div class="testimonials__column">
+			<div class="testimonials__column">
 
-			<q class="text">
-				Smoothie is great. I don't know what else to say. I will let my mum know about this, she could
-				really make use of Smoothie! Smoothie saved my business.
-			</q>
-			<div class="testimonials__sub-text">
-				<cite class="testimonials-name__user">- from Santa Monica, CA</cite>
+				<q class="text testimonials__text">
+					Smoothie is great. I don't know what else to say. I will let my mum know about this, she could
+					really make use of Smoothie! Smoothie saved my business.
+				</q>
+
+				<div class="testimonials__sub-text">
+					<cite class="testimonials-name__user">- from Santa Monica, CA</cite>
+				</div>
+
+			</div>
+
+
+			<div class="testimonials__column">
+
+				<div class="testimonials-avatar">
+					<img src="assets/images/testimonials/avatar.png" alt="">
+				</div>
+
 			</div>
 
 		</div>
 
+		<div class="sidebar">
 
-		<div class="testimonials__column">
+			<button class="arrow__left">
+				<img src="assets/images/testimonials/Arrow-right.png" alt="">
+			</button>
 
-			<div class="testimonials-avatar">
-				<img src="assets/images/testimonials/avatar.png" alt="">
-			</div>
+			<button class="arrow__right">
+				<img src="assets/images/testimonials/Arrow-right.png" alt="">
+			</button>
 
 		</div>
 
 	</div>
-
-	<div class="sidebar">
-
-		<button class="arrow__left">
-			<img src="assets/images/testimonials/Arrow-right.png" alt="">
-		</button>
-
-		<button class="arrow__right">
-			<img src="assets/images/testimonials/Arrow-right.png" alt="">
-		</button>
-
-	</div>
-
 
 </section>
 
