--- a/#source/html/content/instagram.html
+++ b/#source/html/content/instagram.html
@@ -4,46 +4,41 @@
 
 		<div class="instagram__column">
 
-			<div class="instagram__image">
+			<div class="instagram__image ibg">
 				<img src="assets/images/istagram/Img.png" alt="">
 			</div>
-			<img class="instagram__icon" src="assets/images/istagram/Icon-inst.png" alt="">
 
 		</div>
 
 		<div class="instagram__column">
 
-			<div class="instagram__image">
+			<div class="instagram__image ibg">
 				<img src="assets/images/istagram/Img1.png" alt="">
 			</div>
-			<img class="instagram__icon" src="assets/images/istagram/Icon-inst.png" alt="">
 
 		</div>
 
 		<div class="instagram__column">
 
-			<div class="instagram__image">
+			<div class="instagram__image ibg">
 				<img src="assets/images/istagram/Img2.png" alt="">
 			</div>
-			<img class="instagram__icon" src="assets/images/istagram/Icon-inst.png" alt="">
 
 		</div>
 
 		<div class="instagram__column">
 
-			<div class="instagram__image">
+			<div class="instagram__image ibg">
 				<img src="assets/images/istagram/Img3.png" alt="">
 			</div>
-			<img class="instagram__icon" src="assets/images/istagram/Icon-inst.png" alt="">
 
 		</div>
 
 		<div class="instagram__column">
 
-			<div class="instagram__image">
+			<div class="instagram__image ibg">
 				<img src="assets/images/istagram/Img4.png" alt="">
 			</div>
-			<img class="instagram__icon" src="assets/images/istagram/Icon-inst.png" alt="">
 
 		</div>
 
