--- a/#source/html/header.html
+++ b/#source/html/header.html
@@ -33,19 +33,19 @@
 						<ul class="icon__column">
 							<li class="icon__list">
 								<a class="icon__link" href="#">
-									<img src="assets/images/header/Search-icon.svg" alt="#">
+									<img src="assets/images/header/Search-icon.png" alt="#">
 								</a>
 							</li>
 
 							<li class="icon__list">
 								<a class="icon__link" href="#">
-									<img src="assets/images/header/User-icon.svg" alt="#">
+									<img src="assets/images/header/User-icon.png" alt="#">
 								</a>
 							</li>
 
 							<li class="icon__list">
 								<a class="icon__link " href="#">
-									<img src="assets/images/header/Cart-icon.svg" alt="#">
+									<img src="assets/images/header/Cart-icon.png" alt="#">
 									<div class="icon__tabs">
 										<p>0</p>
 									</div>
@@ -59,19 +59,19 @@
 						<ul class="icon__column">
 							<li class="icon__list">
 								<a class="icon__link" href="#">
-									<img src="assets/images/header/Facebook-icon.svg" alt="#">
+									<img src="assets/images/header/Facebook-icon.png" alt="#">
 								</a>
 							</li>
 
 							<li class="icon__list">
 								<a class="icon__link" href="#">
-									<img src="assets/images/header/Pinterest-icon.svg" alt="#">
+									<img src="assets/images/header/Pinterest-icon.png" alt="#">
 								</a>
 							</li>
 
 							<li class="icon__list">
 								<a class="icon__link" href="#">
-									<img src="assets/images/header/Instagram-icon.svg" alt="#">
+									<img src="assets/images/header/Instagram-icon.png" alt="#">
 								</a>
 							</li>
 
