--- a/index.html
+++ b/index.html
@@ -17,10 +17,13 @@
 <!--*************************************-->
 
 <header class="header">
+
 	<div class="conteiner">
 		<div class="header__row">
 			<div class="header__top">
-
+				<div class="header__burger">
+					<span></span>
+				</div>
 				<div class="header__column ">
 					<nav class="header__nav">
 						<ul class="nav__list">
@@ -100,9 +103,10 @@
 
 			</div>
 		</div>
-
 	</div>
+	<div class="menu"></div>
 </header>
+
 
 <div class="header__background ibg">
 	<img src="assets/images/header/img.png" alt="#">
@@ -626,7 +630,7 @@
 
 				<div class="footer__row footer__row--df">
 
-					<h3 class="footer__text">Follow Us</h3>
+					<h3 class="footer__text"><span> Follow Us</span></h3>
 					<!--- sub-colum-------------------------------------------->
 					<ul class="footer-icon__list">
 
@@ -665,7 +669,8 @@
 	<div class="footer__bottom--bg">
 		<div class="conteiner">
 			<div class="footer__bottom">
-				<small class="author-rights">© 2020. All Rights Reserved. </small>
+				<address class="author-rights">© 2020. All Rights Reserved.
+				</address>
 
 				<p class="footer__bottom-text">Go top</p>
 
