--- a/#source/html/footer.html
+++ b/#source/html/footer.html
@@ -125,7 +125,7 @@
 
 				<div class="footer__row footer__row--df">
 
-					<h3 class="footer__text">Follow Us</h3>
+					<h3 class="footer__text"><span> Follow Us</span></h3>
 					<!--- sub-colum-------------------------------------------->
 					<ul class="footer-icon__list">
 
@@ -164,7 +164,8 @@
 	<div class="footer__bottom--bg">
 		<div class="conteiner">
 			<div class="footer__bottom">
-				<small class="author-rights">© 2020. All Rights Reserved. </small>
+				<address class="author-rights">© 2020. All Rights Reserved.
+				</address>
 
 				<p class="footer__bottom-text">Go top</p>
 
