--- a/index.html
+++ b/index.html
@@ -356,8 +356,10 @@
 
 			<div class="story__column">
 				<div class="story__image ibg">
-					<img src="assets/images/story/Stamp.png" alt="story">
+					<img src="../assets/images/story/img.png" alt="story">
 				</div>
+				<img class="story__image--stamp" src="../assets/images/story/Stamp.png" alt="">
+
 			</div>
 
 		</div>
